@@ -8,31 +8,23 @@ import net.minecraftforge.common.config.Configuration;
  **/
 public class Properties {
 
-	/** Reference to the mod id which is used by forge **/
-	public static final String MOD_ID = "trapcraft";
-	/** The readable name used by forge **/
-	public static final String MOD_NAME = "Trapcraft";
-	/** Version string for the mod **/
-	public static final String MOD_VERSION = "v2.3.0a";
-	
-	public static final String SP_CLIENT = "trapcraft.proxy.ClientProxy";
-	public static final String SP_SERVER = "trapcraft.proxy.CommonProxy";
-
 	/** The configuration file where all variables can be accessed**/
 	public static Configuration config;
 	
 	//Texture Path
 	public static final String TEX_PACKAGE = "trapcraft:";
-	public static final ResourceLocation RES_BLOCK_MAGNETIC_CHEST = new ResourceLocation(TEX_PACKAGE + "textures/model/magnetic_chest.png");
+	public static final ResourceLocation RES_BLOCK_MAGNETIC_CHEST = new ResourceLocation(TEX_PACKAGE + "textures/entity/chest/magnetic_chest.png");
 	public static final ResourceLocation RES_GUI_IGNITER = new ResourceLocation(TEX_PACKAGE + "gui/igniter.png");
-	public static final ResourceLocation RES_MOB_DUMMY = new ResourceLocation(TEX_PACKAGE + "mob/dummy.png");
+	public static final ResourceLocation RES_MOB_DUMMY_OAK = new ResourceLocation(TEX_PACKAGE + "textures/entity/dummy/dummy_oak.png");
+	public static final ResourceLocation RES_MOB_DUMMY_BIRCH = new ResourceLocation(TEX_PACKAGE + "textures/entity/dummy/dummy_birch.png");
+	public static final ResourceLocation RES_MOB_DUMMY_SPRUCE = new ResourceLocation(TEX_PACKAGE + "textures/entity/dummy/dummy_spruce.png");
+	public static final ResourceLocation RES_MOB_DUMMY_JUNGLE = new ResourceLocation(TEX_PACKAGE + "textures/entity/dummy/dummy_jungle.png");
+	public static final ResourceLocation RES_MOB_DUMMY_ACACIA = new ResourceLocation(TEX_PACKAGE + "textures/entity/dummy/dummy_acacia.png");
+	public static final ResourceLocation RES_MOB_DUMMY_DARK_OAK = new ResourceLocation(TEX_PACKAGE + "textures/entity/dummy/dummy_dark_oak.png");
 	
     //NBT Data
     public static final String NBT_OWNER_KEY = "teOwner";
     public static final String NBT_CUSTOM_NAME = "CustomName";
     public static final String NBT_ROTATION = "rotation";
     public static final String NBT_STATE = "state";
-    
-    
-	public static final String CHANNEL_NAME = "TRAPCRAFT";
 }
